arti/TODO
NetBSD build problem, reported upstream at
https://gitlab.torproject.org/tpo/core/rust-pwd-grp/-/issues/4

appears in at least 1.2.0, 1.2.3, 1.2.4, and 1.2.5

error[E0425]: cannot find value `getresuid` in crate `libc`
   --> /scratch/net/arti/work/vendor/pwd-grp-0.1.1/src/lmockable.rs:82:16
    |
82  |       pub(crate) getresuid: LibcFn_getresid<uid_t>,
    |                  ^^^^^^^^^
...
92  | / derive_adhoc! {
93  | |     MockableLibcFunctions expect items:
94  | |
95  | |     impl Deref for RealLibc {
...   |
106 | |     }
107 | | }
    | |_- in this macro invocation
    |
   ::: /scratch/net/arti/work/vendor/libc-0.2.154/src/unix/mod.rs:879:5
    |
879 |       pub fn geteuid() -> uid_t;
    |       ------------------------- similarly named function `geteuid` defined here
    |
    = note: this error originates in the macro `derive_adhoc_driver_MockableLibcFunctions` which comes from the expansion of the macro `derive_adhoc` (in Nightly builds, run with -Z macro-backtrace for more info)
help: a function with a similar name exists
    |
82  |     pub(crate) geteuid: LibcFn_getresid<uid_t>,
    |                ~~~~~~~
help: consider importing this function
    |
41  + use crate::getresuid;
    |

error[E0425]: cannot find value `getresgid` in crate `libc`
   --> /scratch/net/arti/work/vendor/pwd-grp-0.1.1/src/lmockable.rs:84:16
    |
84  |       pub(crate) getresgid: LibcFn_getresid<gid_t>,
    |                  ^^^^^^^^^
...
92  | / derive_adhoc! {
93  | |     MockableLibcFunctions expect items:
94  | |
95  | |     impl Deref for RealLibc {
...   |
106 | |     }
107 | | }
    | |_- in this macro invocation
    |
   ::: /scratch/net/arti/work/vendor/libc-0.2.154/src/unix/mod.rs:878:5
    |
878 |       pub fn getegid() -> gid_t;
    |       ------------------------- similarly named function `getegid` defined here
    |
    = note: this error originates in the macro `derive_adhoc_driver_MockableLibcFunctions` which comes from the expansion of the macro `derive_adhoc` (in Nightly builds, run with -Z macro-backtrace for more info)
help: a function with a similar name exists
    |
84  |     pub(crate) getegid: LibcFn_getresid<gid_t>,
    |                ~~~~~~~
help: consider importing this function
    |
41  + use crate::getresgid;
    |
